Setting up spring security with jwt, added the login forms in react
